[gd_scene load_steps=6 format=3 uid="uid://cr0xe6lbcbhyk"]

[ext_resource type="Script" path="res://core/dialog/overworld_dialog_balloon.gd" id="1_op1xb"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Theme" uid="uid://u6n8alqxmbcj" path="res://core/theme/general_theme.tres" id="2_h2w7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d24i"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3c8"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false

[node name="OverworldDialogBalloon" type="CanvasLayer" node_paths=PackedStringArray("response_template")]
layer = 100
script = ExtResource("1_op1xb")
response_template = NodePath("Balloon/Margin/VBox/ResponseTemplate")

[node name="Balloon" type="ColorRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("2_h2w7d")
color = Color(1, 1, 1, 0)

[node name="Margin" type="MarginContainer" parent="Balloon"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin"]
offset_left = 20.0
offset_top = 10.0
offset_right = 620.0
offset_bottom = 109.0
theme_override_constants/separation = 10

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Margin/VBox"]
modulate = Color(1, 1, 1, 0.501961)
offset_right = 600.0
offset_bottom = 12.0
mouse_filter = 1
theme = ExtResource("2_h2w7d")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Character"
fit_content_height = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Margin/VBox" instance=ExtResource("2_a8ve6")]
anchors_preset = 0
anchor_right = 0.0
offset_top = 22.0
offset_right = 600.0
offset_bottom = 31.0
grow_horizontal = 1
theme_override_font_sizes/normal_font_size = 6
text = "Dialogue"

[node name="Responses" type="VBoxContainer" parent="Balloon/Margin/VBox"]
offset_top = 41.0
offset_right = 600.0
offset_bottom = 41.0
theme_override_constants/separation = 2

[node name="ResponseTemplate" type="RichTextLabel" parent="Balloon/Margin/VBox"]
offset_top = 51.0
offset_right = 600.0
offset_bottom = 84.0
theme_override_styles/focus = SubResource("StyleBoxFlat_5d24i")
theme_override_styles/normal = SubResource("StyleBoxFlat_oj3c8")
bbcode_enabled = true
text = "Response"
fit_content_height = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="resized" from="Balloon/Margin" to="." method="_on_margin_resized"]
